--- a/index.html
+++ b/index.html
@@ -141,8 +141,19 @@
     </div>
 </div>
 
+<div>
+    <div></div>
+    <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+    <button>get started now</button>
+</div>
 
-
+<div>
+    <div></div>
+    <h2>Easy To Etid & Very Easily Control</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+    <button>learn more</button>
+</div>
 
     
 </body>
