--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=`, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Block</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 
@@ -12,14 +14,14 @@
  <div>
     <div>
         <a href=""></a>
-        <ul>
+        <ul class="nav">
             <li>Home</li>
             <li>features</li>
             <li>video</li>
             <li>screens</li>
             <li>pricing</li>
             <li>team</li>
-            <li><a href="">free trail</a></li>
+            <li><a href="" class="btn-free">free trail</a></li>
         </ul>
     </div>
         <div>
@@ -154,6 +156,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
     <button>learn more</button>
 </div>
+
+
 
     
 </body>
