--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Block</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
- <div>
+ <div class="page-header">
     <div>
         <a href=""></a>
         <ul class="nav">
@@ -33,7 +34,7 @@
     </div>
  </div>   
 
- <div>
+ <div class="page-company">
      <ul>
          <li></li>
          <li></li>
@@ -43,52 +44,53 @@
  </div>
 
 <div>
-    <div>
+    <div class="grid">
         <h2><span>Features</span>Best features ever screen</h2>
-        <div>
+        <div class="grid-item">
+            <div >
             <div></div>
             <h3>Well documented</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="grid-item">
             <div></div>
             <h3>Highly Customizeable</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="grid-item">
             <div></div>
             <h3>Mobile Friednly Design</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="grid-item">
             <div></div>
             <h3>Easy To Edit</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="grid-item">
             <div></div>
             <h3>Responsive Design</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="grid-item">
             <div></div>
             <h3>24/7 Online Support</h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed</p>
+            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing elit, sed don eiusmod tempor incididunt.</p>
             <a href="">Read more</a>
         </div>
-        <div>
+        <div class="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p><span>Rosalina Pong</span> - Founder, uithemes</p>
         </div>
     </div>    
 </div>
 
-<div>
+<div class="page-subscribe">
     <div>
         <div>
             <h2><span>Subscribe</span>Signup For A Trail</h2>
@@ -100,7 +102,7 @@
     </div>
 </div>
 
-<div>
+<div class="page-software">
     <div></div>
     <h2>Grab Your  Software With Amazing  Features</h2>
     <p></p>
@@ -112,7 +114,7 @@
     </dl>
 </div> 
 
-<div>
+<div class="page-stat">
     <div>
         <h2><span>FUn Facts</span>Some Fun Facts About Dashboard</h2>
         <ul>
@@ -128,7 +130,7 @@
 
 </div>
 
-<div>
+<div class="page-app">
     <div>
         <div>
             <h2>Meet With Future Landingpage</h2>
@@ -143,20 +145,32 @@
     </div>
 </div>
 
-<div>
-    <div></div>
-    <h2>Limpon Is Suitable For Anytype LandingPage</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-    <button>get started now</button>
+<div class="page-analytics">
+    <div>
+        <img src="" alt="">
+        <div>
+            <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <a href="">get started now</a>
+        </div>
+    </div>
 </div>
 
-<div>
-    <div></div>
-    <h2>Easy To Etid & Very Easily Control</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-    <button>learn more</button>
+<div class="page-analytics-two">
+    <div>
+        <img src="" alt="">
+        <div>
+            <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+            <a href="">Learn more</a>
+        </div>
+    </div>
 </div>
 
+<div class="page-screen">
+    <h2><span>screen preview</span>Screenshot With Details</h2>
+    <img src="" alt="">
+</div>
 
 
     
