--- a/index.html
+++ b/index.html
@@ -187,6 +187,76 @@
     <img src="" alt="">
 </div>
 
+<div class="page-clients">
+    <h2><span>testimonials</span>Our Happy Clients</h2>
+    <div class="box-clients">
+        <div>
+            <P>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</P>
+            <P class="name">Rolin B. Mirano</P>
+            <P class="position">ceo, uihub</P>  
+        </div>
+        <div>
+            <P>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</P>
+            <P class="name">Rolin B. Mirano</P>
+            <P class="position">ceo, uihub</P>  
+        </div>
+        <div>
+            <P>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</P>
+            <P class="name">Rolin B. Mirano</P>
+            <P class="position">ceo, uihub</P>  
+        </div>
+    </div>
+
+</div>
+
+<div class="page-plan">
+    <h2><span>our plans</span>Pricing Plans</h2>
+    <div class="box-prise">
+        <div class="box-price-item">
+            <h3>FREE</h3>
+            <p><strong>starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose Plan</a>
+        </div>
+        <div class="box-price-item active">
+            <h3><span>$</span><span>90</span><span>/mo</span></h3>
+            <p><strong>starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose Plan</a>
+        </div>
+        <div class="box-price-item">
+            <h3><span>$</span><span>350</span><span>/mo</span></h3>
+            <p><strong>starter</strong></p>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Hosting Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <a href="">Choose Plan</a>
+        </div>
+    </div>
+</div>
+
+<div class="page-team">
     
+</div>
+
 </body>
 </html>
