--- a/index.html
+++ b/index.html
@@ -255,7 +255,44 @@
 </div>
 
 <div class="page-team">
-    
+    <h2><span>ANGELS</span>Our Team</h2>
+    <div class="box-team">
+        <div>
+            <p>founder</p>
+            <p>Ricardo T. Obrien</p>
+        </div>
+        <div>
+            <p>CEO</p>
+            <p>Alberto Del Rio</p>
+        </div>
+        <div>
+            <p>Desinger</p>
+            <p>Thomas Alva Adison</p>
+        </div>
+    </div>
+</div>
+
+<div class="page-form">
+    <h2>Start Your Free Trail No Need Credit Card.</h2>
+    <form action="">
+        <input type="text" placeholder="Enter your name here">
+        <input type="email" placeholder="Enter your email here">
+        <textarea name="textMessage" placeholder="Enter your message here"></textarea>
+        <button type="submit"><span></span> Submit now</button>
+    </form>
+</div>
+
+<div class="footer">
+    <div>
+        <p>Made With Love & Copyright By - <a href="">limpon</a></p>
+        <ul class="social">
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+            <li><a href="" target="_blank"></a></li>
+        </ul>
+    </div>
 </div>
 
 </body>
